2008-09-15  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * plugins/splitwindow.c:
   Use SCI_STYLEGET(FONT|SIZE) instead of parsing editor_font.


2008-09-12  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * plugins/splitwindow.c:
   Make menu document-sensitive.


2008-09-11  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/geanyobject.c, src/geanyobject.h, src/document.c,
   doc/plugins.dox:
   Add plugin signal "document-close", sent just before a document is
   closed.
 * plugins/splitwindow.c:
   Unsplit when the source document is closed.
 * doc/plugins.dox:
   Fix wrong parameter for "project-close" signal.
 * plugins/splitwindow.c:
   Set pane splitter halfway.
   Copy cursor position from original editor.


2008-09-10  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * plugins/splitwindow.c:
   Add Unsplit command.
   Clean up menus and split window when unloading plugin.
 * plugins/splitwindow.c:
   Move menu items to a submenu.


2008-08-26  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/plugindata.h, src/plugins.c, po/POTFILES.in,
   plugins/splitwindow.c, plugins/Makefile.am, plugins/makefile.win32:
   Add Split Window plugin (work-in-progress).


2008-08-26  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/highlighting.c:
   Add assert statements to check that the StyleSet styling arrays are
   not exceeded.
   Make highlighting_get_style() work with all filetypes.
 * src/highlighting.c, src/highlighting.h, src/plugindata.h:
   Rename HighlightingStyle to GeanyLexerStyle.
   Add dox for highlighting_get_style(), GeanyLexerStyle, mentioning
   SCI_STYLEGETFORE.


2008-08-25  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/document.c, src/editor.c, src/editor.h:
   Add editor_destroy() to dispose of a GeanyEditor struct (in future
   we may want to do more than just free it).