@@ -141,7 +141,7 @@ void				sci_get_text_range			(ScintillaObject * sci, gint start, gint end, gchar
 void				sci_selection_duplicate		(ScintillaObject * sci);
 void				sci_line_duplicate			(ScintillaObject * sci);
 void				sci_insert_text				(ScintillaObject * sci, gint pos, const gchar *text);
-void				sci_grap_focus				(ScintillaObject * sci);
+void				sci_grab_focus				(ScintillaObject * sci);
 void				sci_set_cursor				(ScintillaObject * sci, gint cursor);
 void				sci_target_from_selection	(ScintillaObject * sci);
 void				sci_target_start			(ScintillaObject * sci, gint start);
