@@ -1,3 +1,12 @@
+2008-09-16  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/keybindings.c, src/sciwrappers.c, src/sciwrappers.h,
+   src/filetypes.c:
+   Fix Doxygen 1.5.4 undocumented parameter warnings.
+   Improve dox for sciwrappers.c.
+   Correct sci_grap_focus() misspelling.
+
+
 2008-09-15  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * plugins/splitwindow.c:
